--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+*watertap/flowsheets/electroNP/initialization_training
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -5,6 +7,7 @@ __pycache__/
 
 # C extensions
 *.so
+*.png
 
 # Distribution / packaging
 .Python
