--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+#ix_with_regen temp
+*.png
+watertap/flowsheets/electroNP/initialization_training
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
